Add web service annotations (#1)
* Added ability so specify annotations for web service

* Added ability so specify annotations for web service

---------

Co-authored-by: yyarmoshyk <yyarmoshyk@ip-10-0-0-23.eu-west-1.compute.internal>

--- a/values.yaml
+++ b/values.yaml
@@ -84,6 +84,10 @@ web:
     # nodePort: 30580
     # port: 80
     externalIPs: []
+    ## Annotations to be added to the service (if LoadBalancer is used)
+    #  An example below is needed for GKE IAP enablement
+    annotations: {}
+      # beta.cloud.google.com/backend-config: backend-config-iap
 
   ingress:
     enabled: false
