--- a/templates/web/service.yaml
+++ b/templates/web/service.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "jitsi-meet.web.fullname" . }}
+  annotations:
+  {{- range $key, $value := .Values.web.service.annotations }}
+    {{ $key }}: {{ $value | quote }}
+  {{- end }}
+
   labels:
     {{- include "jitsi-meet.web.labels" . | nindent 4 }}
 spec:
