--- a/charts/prosody/values.yaml
+++ b/charts/prosody/values.yaml
@@ -1,6 +1,10 @@
 # Default values for prosody.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+externalSecretsNames:
+  jitsi-app-secret:
+    envVar: JWT_APP_SECRET
+    gcsmRef: jitsi_app_secret
 
 image:
   repository: nginx
