Updated external secret handling in prosody chart

--- a/charts/prosody/templates/external_secrets.yaml
+++ b/charts/prosody/templates/external_secrets.yaml
@@ -1,16 +1,19 @@
+{{- $fullname := include "prosody.fullname" . -}}
+{{- $labels := include "prosody.labels" . | nindent 4 -}}
+
+{{- $clusterSecretStoreName := .Values.clusterSecretStoreName -}}
 {{- range $key, $value := .Values.externalSecretsNames }}
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: {{ include "prosody.fullname" . }}-{{ $key }}
+  name: {{ $fullname }}-{{ $key }}
   labels:
-    {{- include "prosody.labels" . | nindent 4 }}
-
+    {{- $labels }}
 spec:
   refreshInterval: 30m
   secretStoreRef:
-    name: {{ $.Values.clusterSecretStoreName }}
+    name: {{ $clusterSecretStoreName }}
     kind: ClusterSecretStore
   data:
     - secretKey: {{ $key }}
