--- a/charts/prosody/templates/statefulset.yaml
+++ b/charts/prosody/templates/statefulset.yaml
@@ -57,28 +57,29 @@ spec:
           - {{ tpl (toYaml . ) $ | indent 12 | trim }}
           {{- end }}
           {{- end }}
+          {{- if or ($.Values.externalSecretsNames) ($.Values.extraEnvs) ($.Values.metrics.enabled) }}
+          env:
           {{- if $.Values.externalSecretsNames }}
           {{- range $key, $value := $.Values.externalSecretsNames }}
-          env:
           - name: {{ $value.envVar }}
             valueFrom:
               secretKeyRef:
                 name: {{ $fullname }}-{{ $key }}
                 key: {{ $key }}
-          {{- end }}
-          {{- end }}
+          {{- end }} #range
+          {{- end }} #if $.Values.externalSecretsNames
           {{- if or (.Values.extraEnvs) (.Values.metrics.enabled) }}
-          env:
           {{- if .Values.metrics.enabled }}
           - name: PROSODY_ENABLE_METRICS
             value: "true"
           - name: PROSODY_METRICS_ALLOWED_CIDR
             value: "{{ .Values.metrics.allowed_cidr }}"
-          {{- end }}
+          {{- end }} #if .Values.metrics.enabled
           {{- range .Values.extraEnvs }}
           - {{ tpl (toYaml . ) $ | indent 12 | trim }}
-          {{- end }}
-          {{- end }}
+          {{- end }} #range
+          {{- end }} #if or (.Values.extraEnvs) (.Values.metrics.enabled)
+          {{- end }} #if or ($.Values.externalSecretsNames) ($.Values.extraEnvs) ($.Values.metrics.enabled)
           ports:
             - name: xmpp-c2s
               containerPort: {{ index .Values.service.ports "xmpp-c2s" }}
