Tune external secrets (#3)
* Updated external secret handling in prosody chart

* Updated core values

* Updated the versions

* Updated handling of external secrets into env vars

--- a/charts/prosody/values.yaml
+++ b/charts/prosody/values.yaml
@@ -1,10 +1,18 @@
 # Default values for prosody.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-externalSecretsNames:
-  jitsi-app-secret:
-    envVar: JWT_APP_SECRET
-    gcsmRef: jitsi_app_secret
+# clusterSecretStoreName:
+
+# externalSecretsNames:
+#   jitsi-app-secret:
+#     envVar: JWT_APP_SECRET
+#     gcsmRef: jitsi_app_secret
+#   jitsi-accepted-issuers:
+#     envVar: JWT_ACCEPTED_ISSUERS
+#     gcsmRef: jitsi_accepted_domains
+#   jitsi-accepted-audiences:
+#     envVar: JWT_ACCEPTED_AUDIENCES
+#     gcsmRef: jitsi_accepted_domains
 
 image:
   repository: nginx
