--- a/charts/prosody/templates/statefulset.yaml
+++ b/charts/prosody/templates/statefulset.yaml
@@ -1,3 +1,6 @@
+{{- $fullname := include "prosody.fullname" . -}}
+
+
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -54,25 +57,29 @@ spec:
           - {{ tpl (toYaml . ) $ | indent 12 | trim }}
           {{- end }}
           {{- end }}
-          {{- if or (.Values.extraEnvs) (.Values.metrics.enabled) }}
+          {{- if or ($.Values.externalSecretsNames) ($.Values.extraEnvs) ($.Values.metrics.enabled) }}
           env:
-          {{- range $key, $value := .Values.externalSecretsNames }}
+          {{- if $.Values.externalSecretsNames }}
+          {{- range $key, $value := $.Values.externalSecretsNames }}
           - name: {{ $value.envVar }}
             valueFrom:
               secretKeyRef:
-                name: {{ include "prosody.fullname" . }}-{{ $key }}
+                name: {{ $fullname }}-{{ $key }}
                 key: {{ $key }}
-          {{- end }}
+          {{- end }} #range
+          {{- end }} #if $.Values.externalSecretsNames
+          {{- if or (.Values.extraEnvs) (.Values.metrics.enabled) }}
           {{- if .Values.metrics.enabled }}
           - name: PROSODY_ENABLE_METRICS
             value: "true"
           - name: PROSODY_METRICS_ALLOWED_CIDR
             value: "{{ .Values.metrics.allowed_cidr }}"
-          {{- end }}
+          {{- end }} #if .Values.metrics.enabled
           {{- range .Values.extraEnvs }}
           - {{ tpl (toYaml . ) $ | indent 12 | trim }}
-          {{- end }}
-          {{- end }}
+          {{- end }} #range
+          {{- end }} #if or (.Values.extraEnvs) (.Values.metrics.enabled)
+          {{- end }} #if or ($.Values.externalSecretsNames) ($.Values.extraEnvs) ($.Values.metrics.enabled)
           ports:
             - name: xmpp-c2s
               containerPort: {{ index .Values.service.ports "xmpp-c2s" }}
